--- a/_posts/2009/2009-04-01-frases-7.md
+++ b/_posts/2009/2009-04-01-frases-7.md
@@ -8,6 +8,7 @@ image: assets/images/frases2.jpg
 
 > La masturbación es el sexo con alguien a quien amas.
 <br/>Woody Allen
+<p/>
 > Si los hombres pudieran tener orgasmos sin parar, lo más seguro es que a estas alturas la humanidad no habría ni siquiera inventado la rueda.
 <br/>Ralf König
 <p/>
@@ -57,7 +58,9 @@ image: assets/images/frases2.jpg
 <br/>Robert Orben
 <p/>
 > Me hubiera gustado que Adán hubiera muerto con todas las costillas dentro de su cuerpo.
-<br/>Dion Boucicault</b></div><div style="text-align: justify;"><br /> Cuanto más conozco a los hombres, menos los quiero. Si pudiese decir lo mismo de las mujeres me iría mucho mejor.
+<br/>Dion Boucicault
+<p/>
+> Cuanto más conozco a los hombres, menos los quiero. Si pudiese decir lo mismo de las mujeres me iría mucho mejor.
 <br/>Lord Byron
 <p/>
 > Las mujeres hablan porque desean hablar, mientras que un hombre sólo habla cuando se siente empujado por algo ajeno a él como, por ejemplo, si no encuentra unos calcetines limpios.
@@ -158,4 +161,3 @@ image: assets/images/frases2.jpg
 <p/>
 > Los que tienen alguna fortuna piensan que lo más importante en el mundo es el amor. Los pobres saben que es el dinero.
 <br/>Gerald Brenan
-
