--- a/_posts/2019/2019-12-20-watchmen.md
+++ b/_posts/2019/2019-12-20-watchmen.md
@@ -14,4 +14,4 @@ I heard a joke once. Man goes to doctor, says he's depressed. Life seems harsh a
 Good joke. Everybody laugh. Roll on snare drum. Curtains.
 
 
-***Watchmen* at <a target="_blank" href="https://www.imdb.com/title/tt0409459/">IMDB</a>.**
+***Watchmen** at <a target="_blank" href="https://www.imdb.com/title/tt0409459/">IMDB</a>.*
