--- a/_posts/2021/2021-02-25-sapiens.md
+++ b/_posts/2021/2021-02-25-sapiens.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Sapiens
-by: Chuck Palahniuk
+by: Yuval Noah Harari
 date: '2021-02-25T09:14:10.000+02:00'
 categories: [ read, EN ]
 image: assets/images/sapiens.jpg
