--- a/_posts/2021/2021-02-25-sapiens.md
+++ b/_posts/2021/2021-02-25-sapiens.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Sapiens
+title: 'Sapiens: A Brief History of Humankind'
 by: Yuval Noah Harari
 date: '2021-02-25T09:14:10.000+02:00'
 categories: [ read, EN ]
