--- a/_posts/2021/2021-06-07-homo-deus.md
+++ b/_posts/2021/2021-06-07-homo-deus.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Homo Deus'
+title: 'Homo Deus: A Brief History of Tomorrow'
 by: Yuval Noah Harari
 date: '2021-06-07T19:14:10.000+02:00'
 categories: [ read, EN ]
