--- a/_posts/2021/2021-06-07-homo-deus.md
+++ b/_posts/2021/2021-06-07-homo-deus.md
@@ -8,6 +8,6 @@ image: assets/images/homo_deus.jpg
 rating: 5
 ---
 
-(...)) if an English youth decided to join Amnesty International and travel to Syria to protect the human rights of refugees, he will be seen as a hero. In the Middle Ages people would have thought he had gone bonkers. Nobody in twelfth-century England knew what human rights were. You want to travel to the Middle East and risk your life not in order to kill Muslims, but to protect one group of Muslims from another? You must be out of your mind.
+(...) if an English youth decided to join Amnesty International and travel to Syria to protect the human rights of refugees, he will be seen as a hero. In the Middle Ages people would have thought he had gone bonkers. Nobody in twelfth-century England knew what human rights were. You want to travel to the Middle East and risk your life not in order to kill Muslims, but to protect one group of Muslims from another? You must be out of your mind.
 
 That’s how history unfolds. People weave a web of meaning, believe in it with all their heart, but sooner or later the web unravels, and when we look back we cannot understand how anybody could have taken it seriously.
